[project]
name = "deathcon-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "anthropic>=0.57.1",
    "capstone>=5.0.6",
    "duckdb>1.3.1",
    "flare-floss>=3.1.1",
    "ibis-framework[duckdb]>=10.6.0",
    "marimo[lsp,recommended,sql]>0.16.0",
    "mcp>=1.12.4",
    "openai>=1.93.3",
    "polars==1.31.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "python-lsp-server>=1.13.0",
    "tldextract==5.3.0",
    "watchdog>=6.0.0",
    "yara-x>=1.4.0",
    "tranco>=0.8.1",
    "volatility3 @ git+https://github.com/volatilityfoundation/volatility3.git@develop",
    "process-tree-widget>=0.0.1",
]


[tool.marimo.formatting]
line_length = 120

[tool.marimo.save]
format_on_save = true
autosave = "after_delay"
autosave_delay = 1000

[tool.marimo.sharing]
html = true
wasm = true

[tool.marimo.display]
theme = "light"

[tool.marimo.runtime]
default_sql_output = "polars"
auto_instantiate = false
on_cell_change = "autorun"
auto_reload = "autorun"
reactive_tests = true